--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
-<!DOCTYPE html>
-
+<!DOCTYPE HTML>
+<!--
+	Landed by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
 
+<head>
+	<title>IDK-5 &mdash; Our Project</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="image icon" href="/images/pic01.jpg">
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body>
-    <h1>
-        Hello IDK-5
-    </h1>
+
+<body class="is-preload landing">
+	<div id="page-wrapper">
+
+		
+		<!-- Banner -->
+		<section id="banner">
+			<div class="content">
+				<header>
+					<h2>COSC2196: IDK-5</h2>
+					<h3>Introduction to Information Technology</h3>
+					<h4>Assessment 3: Out IT Project</h4>
+					<h5>Innovation | Dedication | Knowledge</h5>
+					<h1>We are Team #IDK-5</h1>
+				</header>
+				<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+			</div>
+			<a href="#one" class="goto-next scrolly">Next</a>
+		</section>
+
+		<!-- Header -->
+		<header id="header">
+
+			<h1 id="logo"><a href="#banner"  class="scrolly">Home</a></h1>
+
+			<nav id="nav">
+				<ul>
+
+					<li>
+						<a href="PersonalInfo.html">Team Composition</a>
+						<ul>
+							<li><a href="PersonalInfo.html">Meet the Team</a></li>
+							<li><a href="Team-Profile.html">Team Profile</a></li>
+							<li><a href="Group-Precesses.html">Group Processes</a></li>
+							<li><a href="Career-plans.html">Career Plans</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="Project-Description.html">Our Project</a>
+						<ul>
+							
+							<li><a href="Project-Description.html">Project Description</a></li>
+							<li><a href="Aims.html">Aims</a></li>
+							<li><a href="Project-Plans.html">Plans and Progress</a></li>
+							<li><a href="Roles.html">Roles</a></li>
+							<li><a href="Scopes.html">Scope and Limits</a></li>
+							<li><a href="Tools.html">Tools and Technologies</a></li>
+							<li><a href="Testing.html">Testing</a></li>
+							<li><a href="Timeframe.html">Timeframe</a></li>
+							<li><a href="Risk-Analysis.html">Risk Analysis</a></li>
+							<li><a href="Processes.html">Group Processes</a></li>
+							
+						</ul>
+					</li>
+					<li><a href="Skills.html">Skills</a></li>
+					<li><a href="Reflection.html">Reflection</a></li>
+					<li><a target="_blank" href="https://github.com/IDK-5/CPSC2196-3" class="button icon brands fa-github"><span class="label">GitHub</span></a></li>
+				</ul>
+			</nav>
+			
+		</header>
+		<!-- Two -->
+		<section id="one" class="spotlight style2 right">
+			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+			<div class="content">
+				<header>
+					<h2>Team Composition</h2>			
+				</header>
+				<p style="text-align: left" >On behalf of Team #IDK-5 - Larissa Hennessey, Jacob Depares, and James Walker welcomes you to our website.</p>
+				<p style="text-align: left" >We are certain that you are curious to learn more about us.</p>
+				<ul class="actions">
+					<li><a href="PersonalInfo.html" class="button">Learn More</a></li>
+				</ul>
+			</div>
+			<a href="#three" class="goto-next scrolly">Next</a>
+		</section>
+
+		<!-- Three -->
+		<section id="three" class="spotlight style3 left">
+			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+			<div class="content left-align">
+				<header>
+					<h2>Project Plan</h2>
+				</header>
+				<p style="text-align: left" >Comcare is a sophisticated nation-wide disaster relief resource management tool.</p>
+				<p style="text-align: left" >It's purpose iis to mitigate the impacts on supermarkets shortages caused by disasters and panic buying.</p>
+				<ul class="actions">
+					<li><a href="Project-Description.html" class="button">Learn More</a></li>
+				</ul>
+			</div>
+			<a href="#four" class="goto-next scrolly">Next</a>
+		</section>
+
+
+		<!-- Footer -->
+		<footer id="footer"> 
+			<div class="footer-top">
+				<hr>
+				<div>
+				</div>
+			</div>
+
+			<div class="footer-btm">
+				<hr>
+				<ul class="copyright" style="padding: 0 0;">
+					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+				<hr>
+			</div>
+		</footer>
+
+	</div>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
