--- a/References.html
+++ b/References.html
@@ -125,7 +125,7 @@
 
 				</section>
 				<div class="report-buttons-wrapper">
-					<a href="/" class="button primary">&emsp;&emsp;&emsp;&emsp;Next&emsp;&emsp;&emsp;&emsp;</a> 
+					<a href="index.html" class="button primary">&emsp;&emsp;&emsp;&emsp;Next&emsp;&emsp;&emsp;&emsp;</a> 
 				</div>
 			</div>
 		</div>
