--- a/PersonalInfo.html
+++ b/PersonalInfo.html
@@ -107,7 +107,7 @@
 
 						<div>
 							<div class="image left">
-								<img src="images/Jacob-Depares.jpg" style="max-height: 11em;"
+								<img src="images/Jacob-Depares.jpg" style="max-height: 11em; max-width = 11em;"
 									alt="Image of Jacob Depares" />
 							</div>
 							<h3>Jacob Depares - <a href="https://jdepares.github.io/A1-My-Profile/"
