--- a/PersonalInfo.html
+++ b/PersonalInfo.html
@@ -86,7 +86,7 @@
 
 						<div>
 
-							<div class="image left"><img src="images/Larissa-Hennessey.jpg" style="max-height: 11em;"
+							<div class="image left"><img src="images/Larissa-Hennessey.jpg" style="max-height: 11em; max-width: 11em;"
 									alt="" /></div>
 							<h3>Larissa Hennessey - <a href="https://larissarmit.github.io/Assessment-One/index.html"
 									target="_blank"><u>Individual Website</u></a></h3>
@@ -107,7 +107,7 @@
 
 						<div>
 							<div class="image left">
-								<img src="images/Jacob-Depares.jpg" style="max-height: 11em; max-width = 11em;"
+								<img src="images/Jacob-Depares.jpg" style="max-height: 11em; max-width: 11em;"
 									alt="Image of Jacob Depares" />
 							</div>
 							<h3>Jacob Depares - <a href="https://jdepares.github.io/A1-My-Profile/"
@@ -126,7 +126,7 @@
 						</div>
 
 						<div>
-							<div class="image left"><img src="images/James-Walker.jpg" style="max-height: 11em;"
+							<div class="image left"><img src="images/James-Walker.jpg" style="max-height: 11em; max-width: 11em;"
 									alt="" /></div>
 							<h3>James Walker - <a href="https://westernbeat.github.io" target="_blank"><u>Individual
 										Website</u></a></h3>
